# md2pdf

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/specs/: 2026-05-13-md2pdf-design.md
src/md2pdf/: __init__.py  cli.py  converter.py  default.css
tests/: test_cli.py  test_converter.py
