[project]
name = "md2pdf"
version = "0.1.0"
description = "Convert markdown files to PDF"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "weasyprint>=62",
    "click>=8.0",
]

[project.scripts]
md2pdf = "md2pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2pdf"]

[dependency-groups]
dev = ["pytest>=8.0"]
